--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "devDependencies": {
     "@wojtekmaj/enzyme-adapter-react-17": "^0.4.1",
+    "axios-mock-adapter": "^1.19.0",
     "enzyme": "^3.11.0"
   }
 }
